init commit through bash

--- a/events.html
+++ b/events.html
@@ -35,76 +35,10 @@
 	
 </head>
 <body>
-    <!-- Header -->
-    <header style="background-color: white;">
-         <!-- Navbar starts From here -->
-         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">Homepage</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                  <a class="nav-link" href="about.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <!-- Our teams-->
-<div class="btn-group">
-    <button type="button" class="btn btn-dark">Our Team</button>
-    <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <span class="sr-only">Our teams</span>
-    </button>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Executive committee</a>
-      <a class="dropdown-item" href="#">Advisory Team</a>
-      <a class="dropdown-item" href="#">Community Coordinators</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Suporting Leads</a>
-    </div>
-  </div>
-
-                  <!-- Publications-->
-<div class="btn-group">
-    <button type="button" class="btn btn-dark">Publications</button>
-    <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <span class="sr-only">Our Publications</span>
-    </button>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="constitution.html">constitution</a>
-      <a class="dropdown-item" href="#">Book-2</a>
-      <a class="dropdown-item" href="#">Book-3</a>
-  </div>            
-
-  <!-- News and Notices -->
-  <a class="nav-link" href="#">News and Notices <span class="sr-only">(current)</span></a>
-  <!-- Events -->
-  <div class="btn-group">
-    <button type="button" class="btn btn-dark">Programs</button>
-    <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <span class="sr-only">Our Programs</span>
-    </button>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Poem Compitision</a>
-      <a class="dropdown-item" href="#">Art- Compitision</a>
-      <a class="dropdown-item" href="#">others</a>
-  </div>   
-  <!-- Contact info -->
-  <a class="nav-link" href="#">Contact info <span class="sr-only">(current)</span></a>
-              </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-            </div>
-          </nav> 
-        <hr class="rounded">
-    </header>
-    <!--  -->
 
     <!-- Events Section-->
     <section class="events-section">
-        <h1 style="font-size: 40px;"> Spring 2022 Semester Events</h1>
+        <h1 style="font-size: 40px;"> SOES Events Lists</h1>
         <img class="calendar-icon" src="images/calendar.png" >
         <div class="event-container">
             <div class="event-info">
@@ -112,10 +46,10 @@
                     <h2>First General Meeting</h2>
                 </div>
                 <div class="event-description">
-                    <p>The club’s first general meeting where plans and upcoming events of the Spring semester will be discussed. <br> <br> <b>Time</b>: 1:40 PM - 2:55 PM <br> <b>Meeting ID</b>: 847 4228 6728 <br> <b>Passcode</b>: 708409</p>
+                    <p>The club’s first general meeting where plans and upcoming events of the semester will be discussed. <br> <br> <b>Time</b>: 1:40 PM - 2:55 PM <br> <b>Meeting ID</b>: 847 4228 6728 <br> <b>Passcode</b>: 708409</p>
                 </div>
                 <div class="event-link">
-                    <!-- <a href="https://jjay-cuny.zoom.us/meeting/register/tZAqc-uqpj0tGNyPmcraE3XBWXn7KT_OYcsO " target="_blank" rel="noreferrer noopener"><button>ZOOM</button></a> -->
+                  <a href="#"></a>
                 </div>
                 <div class="event-footer">
                     <div class="event-date">
@@ -131,10 +65,10 @@
                     <h2>Career Prep Workshop</h2>
                 </div>
                 <div class="event-description">
-                    <p>You will learn about the various opportunities at John Jay College and in the Computer Science Field. This event would also be a good opportunity to network with other CS students. <br> <br> <b>Time</b>: 1:40 PM - 2:55 PM <br> <b>Meeting ID</b>:  843 8946 3051 <br> <b>Passcode</b>: 085113</p>
+                    <p>You will learn about the various opportunities at FWU and in the Computer Engineering Field. This event would also be a good opportunity to network with other CS students. <br> <br> <b>Time</b>: 1:40 PM - 2:55 PM <br> <b>Meeting ID</b>:  843 8946 3051 <br> <b>Passcode</b>: 085113</p>
                 </div>
                 <div class="event-link">
-                    <!-- <a href="https://jjay-cuny.zoom.us/meeting/register/tZAuf-CsqDgqH9UKDfz1n7dYv0eSlwl7cRvV" target="_blank" rel="noreferrer noopener"><button>ZOOM</button></a> -->
+                   <a href="#"></a>
                 </div>
                 <div class="event-footer">
                     <div class="event-date">
@@ -153,7 +87,7 @@
                     <p>You will learn the basics of using the Git and Github workflow. <br> <br> <b>Time</b>: 1:40 PM - 2:55 PM <br> <b>Meeting ID</b>:  841 5966 6574 <br> <b>Passcode</b>: 113467</p>
                 </div>
                 <div class="event-link">
-                    <!-- <a href="https://jjay-cuny.zoom.us/meeting/register/tZAscuCuqD0vHdAl9sycll5aRIVZVXnRBB-m" target="_blank" rel="noreferrer noopener"><button>ZOOM</button></a> -->
+                   <a href="#"></a>
                 </div>
                 <div class="event-footer">
                     <div class="event-date">
@@ -172,7 +106,7 @@
                     <p>You will learn the necessary skills to excel in technical Interviews and you’ll learn/practice a couple of Data Structure questions. <br> <br> <b>Time</b>: 1:40 PM - 2:55 PM <br> <b>Meeting ID</b>: 872 1253 1044<br> <b>Passcode</b>: 083836 </p>
                 </div>
                 <div class="event-link">
-                    <!-- <a href="https://jjay-cuny.zoom.us/meeting/register/tZMvduutrToqHtCxBD6SD1ToACxXHVypBlRH" target="_blank" rel="noreferrer noopener"><button>ZOOM</button></a> -->
+                  <a href="#"></a>
                 </div>
                 <div class="event-footer">
                     <div class="event-date">
@@ -191,7 +125,7 @@
                     <p>You will learn how to create a game using HTML/CSS/Javascript. <br> <br> <b>Time</b>: 1:40 PM - 2:55 PM <br> <b>Meeting ID</b>: 819 7069 4954<br> <b>Passcode</b>: 279298</p>
                 </div>
                 <div class="event-link">
-                    <!-- <a href="https://jjay-cuny.zoom.us/meeting/register/tZUkcOmupz8jH9C7rRhCO_vw62bka0-yjzwk" target="_blank" rel="noreferrer noopener"><button>ZOOM</button></a> -->
+                  <a href="#"></a>
                 </div>
                 <div class="event-footer">
                     <div class="event-date">
@@ -210,7 +144,7 @@
                     <p>The club’s last general meeting will show members of the club how to do a Python-related project that you can build on top of, and we will summarize the Spring Semester. <br> <br> <b>Time</b>: 1:40 PM - 2:55 PM <br> <b>Meeting ID</b>: 857 2628 0401<br> <b>Passcode</b>: 733297</p></p>
                 </div>
                 <div class="event-link">
-                    <!-- <a href="https://jjay-cuny.zoom.us/meeting/register/tZEqde-qpjsuGtXI-NYU-nTQWhY4ei-E2kXk" target="_blank" rel="noreferrer noopener"><button>ZOOM</button></a> -->
+                   <a href="#"></a>
                 </div>
                 <div class="event-footer">
                     <div class="event-date">
