--- a/index.html
+++ b/index.html
@@ -147,15 +147,12 @@
           <p class="welcome-section-title">School of Engineering <br>Society Club</p>
           <p class="welcome-section-description">
             A community driven club with the aim of helping and providing civil & Computer Engineering students with all the necessary skills to succeed in their career. Every semester we make it our goal to have unique events for our club members. Come and join us for one of our exciting events!
-            <button type="button" class="btn btn-danger btn-lg">Contact us</button>
             
           </p>
-<!--  
+ 
             <div class= "welcome-buttons-section">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLScdFrJ8y-dtQ10W7aS0q3pGH0ts0rvx65R2jjYxXaMKq2kgJg/viewform?usp=sf_link" class="welcome-button-join" target="_blank" rel="noreferrer noopener">Join The Club</a>
-                    &nbsp; &nbsp;
-                <a href="about.html" class="welcome-button-about">About Us</a>
-            </div> -->
+                <a href="https://forms.gle/BcpiySQgNX99UMxHA" class="welcome-button-join" target="_blank" rel="noreferrer noopener">Join The Club</a>
+            </div>
 
             <!-- <a href="https://github.com/pradipbhatt"><i class="fab fa-github fa-lg desc" aria-hidden="true" style="color: black; padding-top: 20px;"></i></a> -->
             <!-- <a href="https://discord.gg/fJZKErEnPa"><i class="fab fa-discord fa-lg desc" style="color: #5865F2;"></i></a> -->
