--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                  <a class="nav-link" href="about.html">About-Us <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="about1.html">About-Us <span class="sr-only">(current)</span></a>
                 </li>
                 <!-- Our teams-->
 <div class="btn-group">
