--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">News/Notices</a>
+            <a class="nav-link" href="https://www.facebook.com/profile.php?id=100083543161885">News/Notices</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact-info</a>
