--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
 
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHXX8JNY0K"></script>
 <script>
@@ -321,24 +322,24 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="images/wallpaperflare.com_wallpaper (3).jpg" alt="First slide">
+      <img class="d-block w-100" src="images/2FWUupdated.jpg" alt="First slide">
       <div class="carousel-caption d-none d-md-block">
         <h3>FAR WESTERN UNIVERSITY</h3>
-        <i>A world-class academic institution with academic excellence, creative innovation, and research-based education.</i>
+     <h3> A world-class academic institution with academic excellence, creative innovation, and research-based education.</h3>
       </div> 
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/wallpaperflare.com_wallpaper (6).jpg" alt="Second slide">
+    <div class="carousel-item" >
+      <img class="d-block w-100" src="images/3FWUupdated2.jpg" alt="Second slide">
       <div class="carousel-caption d-none d-md-block">
           <h3>SCHOOL OF ENGINEERING</h3>
-          <i > FOE is to create educational hob for teacher, teacher educators, researchers and other competent human resources as well as contributing on national development by providing skillfull and trained educators.</i>
+        <h3 > SOES is to create educational hob for teacher, teacher educators, researchers and other competent human resources as well as contributing on national development by providing skillfull and trained educators.</h3>
         </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/wallpaperflare.com_wallpaper (7).jpg" alt="Third slide">
+      <img class="d-block w-100" src="images/4FWUupdated.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
           <h3>SCHOOL OF ENGINEERING SOCIETY</h3>
-          <i >The strategic location of the University in the Far western region would not only support improving the access of local people to higher education but also create dynamism on the overall development of the region.</i>
+         <h3>The strategic location of the University in the Far western region would not only support improving the access of local people to higher education but also create dynamism on the overall development of the region.</h3></i>
         </div>
     </div>
   </div>
