--- a/Art.html
+++ b/Art.html
@@ -5,7 +5,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/globalstyle.css">
     <link rel="stylesheet" href="styles/home.css">
-    <link rel="stylesheet" href="styles/contact.css">
     <script src="https://kit.fontawesome.com/5f5bb1c58f.js" crossorigin="anonymous"></script>
     <script src="global.js"></script>
     <meta charset="UTF-8">
@@ -39,7 +38,7 @@
         <span></span>
         <ul id="menu">
             <li><a class="other-page" href="index.html">home.</a></li>
-            <li><a class="other-page" href="about.html">about.</a></li>
+            <li><a class="other-page" href="about1.html">about.</a></li>
             <!-- <li><a class="other-page" href="resumepage.html">resume.</a></li> -->
             <li><a class="other-page" href="#">projects.</a></li>
             <li><a id="current-page">contact.</a></li>
