--- a/about1.html
+++ b/about1.html
@@ -10,13 +10,14 @@
 
     <title>About SOES</title>
     <link rel="stylesheet" type="text/css" href="styles/style_for_about.css">
+	
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 			
   </head>
   <body>
 	<header id="firsthead" class="py-1">
 		<nav class="navbar navbar-expand-lg navbar-light">
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="color: #fff; background: orange;">
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="color: #fff; background: rgb(143, 164, 9);">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
 
@@ -57,7 +58,7 @@
 		<div class="row">
 			<div class="col-lg-6 col-0">
 				<section id="bg-img">
-					<img src="images/plantation_team.jpg">
+					<img src="images/plantation2.gif">
 				</section>
 			</div>
 			<div class="col-lg-6 col-12">
@@ -144,7 +145,6 @@
 
 	
 
-<!-- enjoy our food -->
 	<div class="container-fluid py-2" id="five">
 		<div class="container col-lg-5 text-center mt-5 " style="color:black;">
 			<h1 style=" color: rgb(113, 155, 168)">Far western university <br> School Of Engineering </h1>
