--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         <span></span>
         <ul id="menu">
             <li><a class="other-page" href="index.html">home.</a></li>
-            <li><a class="other-page" href="about.html">about.</a></li>
+            <li><a class="other-page" href="about1.html">about.</a></li>
             <!-- <li><a class="other-page" href="resumepage.html">resume.</a></li> -->
             <li><a class="other-page" href="#">projects.</a></li>
             <li><a id="current-page">contact.</a></li>
