--- a/contact.html
+++ b/contact.html
@@ -11,97 +11,412 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SOES | Contact</title>
-    <meta name="title" content="SOES | Contact">
-    <meta name="description" content="SOES is Engineering Society Club Of Far Western University.">
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- link to css of this file -->
+    <link rel="stylesheet" href="styles/index.css">
+    <!-- end of link to css  -->
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://pradipbhatt.github.io/School-of-Engineering-SOES-Website/">
-    <meta property="og:title" content="SOES |SOES is Engineering Society Club Of Far Western University Home">
-    <meta property="og:description" content=".">
-    <meta property="og:image" content="./logo/highreslogo.webp">
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+    <!-- end of fontAwesome -->
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://pradipbhatt.github.io/School-of-Engineering-SOES-Website/">
-    <meta property="twitter:title" content="SOES SOES is Engineering Society Club Of Far Western University| Home">
-    <meta property="twitter:description" content=".">
-    <meta property="twitter:image" content="./logo/highreslogo.webp">
+    <!-- Iconify SVG Framework -->
+    <script src="https://code.iconify.design/2/2.1.1/iconify.min.js"></script>
+    <!-- end of SVG -->
+	
+    <link rel="shortcut icon" type="image/x-icon" href="images/logo.jpeg" />
+    <meta
+      name="description"
+      content="SOES"
+    />
+    <meta
+      name="keywords"
+      content="SOES"
+    />
 </head>
-<body>
+
+
+<!-- Body stars from here -->
+<body> 
 <div style="position:fixed; left:0%; top:0%;z-index: 2;">
-    <nav role="navigation">
-    <div id="menuToggle">
-        <input type="checkbox" />
-        <span></span>
-        <span></span>
-        <span></span>
-        <ul id="menu">
-            <li><a class="other-page" href="index.html">home.</a></li>
-            <li><a class="other-page" href="about1.html">about.</a></li>
-            <!-- <li><a class="other-page" href="resumepage.html">resume.</a></li> -->
-            <li><a class="other-page" href="#">projects.</a></li>
-            <li><a id="current-page">contact.</a></li>
+  <!-- Navbar starts here -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="main_navbar">
+    <div class="container-fluid">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <!-- <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li> -->
+          <li class="nav-item">
+            <a class="nav-link" href="about1.html">About SOES</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown" >
+             Notes Section
+            </a>
+            <ul class="dropdown-menu">
+              <li class="nav-item dropdown">
+                <a
+                  class="dropdown-item dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+>
+                Computer Engineering
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="notes/1semister.html">1st semister</a></li>
+                  <li>
+                    <a class="dropdown-item" href="notes/2semister.html">2nd semister</a>
+                  </li>
+                  <!-- <li>
+                    <hr class="dropdown-divider" />
+                  </li> -->
+                  <li>
+                    <a class="dropdown-item" href="notes/3semister.html">3rd semister</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="notes/4semister.html">4rd semister</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="notes/5semister.html">5rd semister</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="notes/6semister.html">6rd semister</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="notes/7semister.html">7rd semister</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="notes/8semister.html">8rd semister</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a
+                      class="dropdown-item dropdown-toggle"
+                      href="#"
+                      role="button"
+                      data-bs-toggle="dropdown">
+                     Extra resources
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Hand written notes</a></li>
+                      <li>
+                        <a class="dropdown-item" href="#">Book solutions</a>
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#"
+                          >Tutorials</a
+                        >
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li><a class="dropdown-item" href="poem.html">Poem Section</a></li>
+              <!-- BE civil -->
+              <li class="nav-item dropdown">
+                <a
+                  class="dropdown-item dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+>
+               Civil Engineering
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="notes/1semister.html">1st semister</a></li>
+                  <li>
+                    <a class="dropdown-item" href="notes/2semister.html">2nd semister</a>
+                  </li>
+                  <!-- <li>
+                    <hr class="dropdown-divider" />
+                  </li> -->
+                  <li>
+                    <a class="dropdown-item" href="notes/3semister.html">3rd semister</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="notes/4semister.html">4rd semister</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="notes/5semister.html">5rd semister</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="notes/6semister.html">6rd semister</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="notes/7semister.html">7rd semister</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="notes/8semister.html">8rd semister</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a
+                      class="dropdown-item dropdown-toggle"
+                      href="#"
+                      role="button"
+                      data-bs-toggle="dropdown">
+                     Extra resources
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Hand written notes</a></li>
+                      <li>
+                        <a class="dropdown-item" href="#">Book solutions</a>
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#"
+                          >Tutorials</a
+                        >
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li><a class="dropdown-item" href="Art.html">Art section</a></li>
+                <a class="dropdown-item" href="#">Article section</a>
+              </li>
+            </ul>
+          </li>
+
+        <!-- Our publication section -->
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown" >
+          Our Publications
+          </a>
+          <ul class="dropdown-menu">
+            <li class="nav-item dropdown">
+              <a
+                class="dropdown-item dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+>
+              Articles
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">1st semister</a></li>
+                <li>
+                  <a class="dropdown-item" href="#">2nd semister</a>
+                </li>
+                <!-- <li>
+                  <hr class="dropdown-divider" />
+                </li> -->
+                <li>
+                  <a class="dropdown-item" href="#">3rd semister</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">4rd semister</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">5rd semister</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">6rd semister</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">7rd semister</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">8rd semister</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="dropdown-item dropdown-toggle"
+                    href="#"
+                    role="button"
+                    data-bs-toggle="dropdown">
+                   Extra resources
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Hand written notes</a></li>
+                    <li>
+                      <a class="dropdown-item" href="#">Book solutions</a>
+                    </li>
+                    <li>
+                      <hr class="dropdown-divider" />
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#"
+                        >Tutorials</a
+                      >
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+          <a class="dropdown-item" href="Art.html">Art section</a></li>
+              <a class="dropdown-item" href="#">Article section</a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.facebook.com/profile.php?id=100083543161885">News/Notices</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact-info</a>
+        </li>
+
         </ul>
+     
+        <form class="d-flex">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success" type="submit">
+            Search
+          </button>
+        </form>
+      </div>
     </div>
-</nav>
+  </nav>
+  <header style="background-color: rgb(76, 184, 22);">
+    <!-- Navbar starts From here -->
 </div>
 <a href="index.html"><img id="logo" alt="Personal Logo" src="images/logo1.jpeg"></a>
 <div class="welcome"><span id="welcome">Contact Us.</span></div>
 <hr id="underline">
 <div style="height: 7vh; margin: 0 auto;"></div>
 <div class="contact-grid">
+<!-- Contact icon for linkedin  -->
     <div class="contact-icon">
         <a class="social-link" href="">
             <i class="link-icon fab fa-linkedin fa-3x"></i>
         </a>
     </div>
     <div class="contact-info">
-        <a href="https://www.linkedin.com/in/pradip-bhatt-328713232/" class="left-underline">
+        <a href="#" class="left-underline">
             Send Us a LinkedIn message
         </a>
     </div>
+
+    <!-- Contact iccon for linkedin  -->
     <div class="contact-icon">
         <a class="social-link" href="https://github.com/pradipbhatt">
             <i class="link-icon fab fa-github fa-3x"></i>
         </a>
     </div>
     <div class="contact-info">
-        <a href="https://github.com/pradipbhatt" class="left-underline">
+        <a href="#" class="left-underline">
             Browse Our GitHub
         </a>
     </div>
+
+<!-- Contact iccon for linkedin  -->
     <div class="contact-icon">
-        <a class="social-link" href="https://www.instagram.com/pradipbhatt3/>
-            <i class="fab fa-instagram fa-3x"></i>
+        <a class="social-link" href="https://github.com/pradipbhatt">
+            <i class="link-icon fab fa-instagram fa-3x"></i>
+        </a>
+    </div>
+
+    <!-- Contact iccon for linkedin  -->
+    <div class="contact-info">
+        <a href="#" class="left-underline">
+            Browse Our instagram
+        </a>
+    </div>
+
+    <!-- Contact iccon for linkedin  -->
+    <div class="contact-icon">
+        <a class="social-link" href="mailto:societyofengineeringstudent@gmail.com">
+            <i class="fas fa-envelope fa-2x"></i>
         </a>
     </div>
     <div class="contact-info">
-        <a href="https://www.instagram.com/pradipbhatt3/" class="left-underline">
-            Check out Our Instagram
-        </a>
-    </div>
-    <div class="contact-icon">
-        <a class="social-link" href="mailto:bhattsammar04@gmail.com">
-            <i class="fas fa-envelope fa-3x"></i>
-        </a>
-    </div>
-    <div class="contact-info">
-        <a href="mailto: bhattsammar04@gmail.com" class="left-underline">
+        <a href="mailto:societyofengineeringstudent@gmail.com " class="left-underline">
             Email Us
         </a>
     </div>
     <div class="contact-icon" style="margin-right:2.5vw;">
         <a class="social-link" href="#">
-            <i class="fas fa-dollar-sign fa-3x"></i>
+            <i class="fas fa-clock fa-2x"></i>
         </a>
     </div>
     <div class="contact-info">
-        <a href="#" class="left-underline">
-            Send Us cash
+        <a href="https://www.google.com/maps/uv?pb=!1s0x39a1ad7bf92b64bb%3A0x869ed4d319273a66!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipOa0EycFBQT4l3PS166c8XmL9cA6IuArQeMAeUc%3Dw213-h160-k-no!5sfar%20western%20university%20-%20Google%20Search!15sCgIgARICCAI&imagekey=!1e10!2sAF1QipMgCuUo2p2h5bsDbw-ac4_LXHOby0LXN2MGP5O5&hl=en&sa=X&ved=2ahUKEwipz_Liht35AhWMR2wGHRK2DD4Qoip6BAhxEAM" class="left-underline">
+            Click here for 360 view of FWU
         </a>
     </div>
+    <div class="contact-icon">
+        <a class="social-link" href="#">
+            <i class="fas fa-map-marked-alt fa-2x"></i>
+        </a>
+    </div>
+    <div class="contact-info">
+        <a href="# " class="left-underline">
+           Way to FWU SOES
+        </a>
+    </div>
+    <h3>Way to Farwestern Universitry</h3>
+    <div class="contact-info">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1745.5557664347136!2d80.17787595872194!3d28.954416200000008!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39a1ac04d865ce05%3A0x89f6ca936b28de92!2sFaculty%20Of%20Engineering%20FWU!5e0!3m2!1sen!2snp!4v1661261484825!5m2!1sen!2snp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+   </div>
 </div>
+ <!-- Footer -->
+ <div class="container">
+    <div class="column-left">
+        <a href="index.html"><img src="images/logo1.jpeg" alt=""></a>
+    </div>
+    <div class="column-center">
+        <a href="mailto:societyofengineeringstudent@gmail.com"><i class="iconify" data-icon="logos:google-gmail" data-width="20" data-height="15"></i></a>
+
+                |
+  
+        <a href="https://github.com/pradipbhatt" target="_blank" rel="noreferrer noopener"><i class="fab fa-github fa-lg" aria-hidden="true" style="color: white;"></i></a>
+
+                |
+  
+        <a href="#" target="_blank" rel="noreferrer noopener"><i class="fab fa-instagram fa-lg" style="color: #C13584;"></i></a>
+
+                |
+  
+        <a href="#" target="_blank" rel="noreferrer noopener"><i class="fab fa-discord fa-lg" style="color: #5865F2;"></i></a>
+        <p id="" class="middleP2" style="text-align: center; color: white;">©2022 School of Engineering Society<br>Campus road St, Mahaendranagr, MNR <br>societyofengineeringstudent@gmail.com</p>
+    </div>
+    <div class="column-right">
+        <a href="https://www.fwneng.com/" target="_blank" rel="noreferrer noopener"><img src="images/fwuimg.jpeg" alt=""></a>
+    </div>
+ </div>
+ <!-- end of footer -->
+
+<!-- JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="js/index.js"></script>
+<!-- end of script -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/bootnavbar.js"></script>
+  <script>
+    new bootnavbar();
+  </script>
 <script>
     setWidth("underline", getWidth("welcome"));
 </script>
