--- a/index.html
+++ b/index.html
@@ -97,9 +97,6 @@
                     <li>
                       <a class="dropdown-item" href="notes/2semister.html">2nd semister</a>
                     </li>
-                    <!-- <li>
-                      <hr class="dropdown-divider" />
-                    </li> -->
                     <li>
                       <a class="dropdown-item" href="notes/3semister.html">3rd semister</a>
                     </li>
@@ -282,7 +279,7 @@
                 </ul>
               </li>
             <a class="dropdown-item" href="Art.html">Art section</a></li>
-                <a class="dropdown-item" href="#">Article section</a>
+                <a class="dropdown-item" href="constitution.html">Constitution Section</a>
               </li>
             </ul>
           </li>
@@ -293,7 +290,9 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact-info</a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link" href="constitution.html">Constitution</a>
+          </li>
           </ul>
        
           <form class="d-flex">
