--- a/constitution.html
+++ b/constitution.html
@@ -302,14 +302,14 @@
 </div>
 <a href="index.html"><img id="logo" alt="Personal Logo" src="images/logo1.jpeg"></a>
 <div class="welcome"><span id="welcome">Our Constitution.</span></div>
+<img alt="Personal Logo" src="images/constituion-fwusoes.gif">
 <hr id="underline">
 <div style="height: 7vh; margin: 0 auto;"></div>
 <div class="contact-grid">
 
 
-
 <!-- Contact icon for linkedin  -->
-
+     
     <!-- Contact iccon for linkedin  -->
     <div class="contact-icon">
         <a class="social-link" href="#">
@@ -317,51 +317,12 @@
         </a>
     </div>
     <div class="contact-info">
-        <a href="#" class="left-underline">
+        <a href="https://drive.google.com/file/d/1aNVcNTieWtCjBxKOVtSMRSiRu0MjHs3S/view?usp=sharing" class="left-underline">
             Browse Our Constitution
         </a>
     </div>
 
-<!-- Contact iccon for linkedin  -->
-    <div class="contact-icon">
-        <a class="social-link" href="#">
-            <i class="link-icon fab fa-instagram fa-3x"></i>
-        </a>
-    </div>
 
-    <!-- Contact iccon for linkedin  -->
-    <div class="contact-info">
-        <a href="#" class="left-underline">
-            Browse Our instagram
-        </a>
-    </div>
-
-    <!-- Contact iccon for linkedin  -->
-    <div class="contact-icon">
-        <a class="social-link" href="mailto:societyofengineeringstudent@gmail.com">
-            <i class="fas fa-envelope fa-2x"></i>
-        </a>
-    </div>
-    <div class="contact-info">
-        <a href="mailto:societyofengineeringstudent@gmail.com " class="left-underline">
-            Email Us
-        </a>
-    </div>
-    <div class="contact-icon" style="margin-right:2.5vw;">
-        <a class="social-link" href="#">
-            <i class="fas fa-clock fa-2x"></i>
-        </a>
-    </div>
-    <div class="contact-info">
-        <a href="https://www.google.com/maps/uv?pb=!1s0x39a1ad7bf92b64bb%3A0x869ed4d319273a66!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipOa0EycFBQT4l3PS166c8XmL9cA6IuArQeMAeUc%3Dw213-h160-k-no!5sfar%20western%20university%20-%20Google%20Search!15sCgIgARICCAI&imagekey=!1e10!2sAF1QipMgCuUo2p2h5bsDbw-ac4_LXHOby0LXN2MGP5O5&hl=en&sa=X&ved=2ahUKEwipz_Liht35AhWMR2wGHRK2DD4Qoip6BAhxEAM" class="left-underline">
-            Click here for 360 view of FWU
-        </a>
-    </div>
-    <div class="contact-icon">
-        <a class="social-link" href="#">
-            <i class="fas fa-map-marked-alt fa-2x"></i>
-        </a>
-    </div>
     <div class="contact-info">
         <a href="# " class="left-underline">
           New Updates are coming soon!
