--- a/constitution.html
+++ b/constitution.html
@@ -302,7 +302,7 @@
 </div>
 <a href="index.html"><img id="logo" alt="Personal Logo" src="images/logo1.jpeg"></a>
 <div class="welcome"><span id="welcome">Our Constitution.</span></div>
-<img alt="Personal Logo" src="images/constituion-fwusoes.gif">
+<img alt="Personal Logo" src="images/constituion-fwucoverpic.jpeg" width="10px" height="800px">
 <hr id="underline">
 <div style="height: 7vh; margin: 0 auto;"></div>
 <div class="contact-grid">
