--- a/notes/1semister.html
+++ b/notes/1semister.html
@@ -24,10 +24,27 @@
 
 <header id="home">
     <div class="container">
-        <div class="hamburger-menu">
-            <i class="fas fa-bars toggle"></i>
-            <i class="fas fa-times toggle"></i>
-        </div>
+
+    
+        <nav class="d-flex align-item-center justify-content-center justify-content-lg-between">
+            <a class="navbar-brand" href="1semister.html">
+                <img class="img-fluid" src="images/logo1.png" alt="">
+            </a>
+            <ul class="nav-list p-0 text-center" >
+                <li class="nav-item">
+                    <a  class="nav-link active"   href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a  class="nav-link active"   href="about1.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a  class="nav-link active"   href="poem.html">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a  class="nav-link active"   href="about1.html">Our Team</a>
+                </li> 
+            </ul>
+        </nav>
         <div class="hero-text w-100 text-white px-2 px-sm-0">
             <h1 class="display-4">Welcome</h1>
             <p class="lead mb-4">To the School of Engineering Society</p>
@@ -278,16 +295,31 @@
 
 
 
+<!-- Footer -->
+<div class="container">
+    <div class="column-left">
+        <a href="index.html"><img src="images/logo1.jpeg" alt=""></a>
+    </div>
+    <div class="column-center">
+        <a href="mailto:societyofengineeringstudent@gmail.com"><i class="iconify" data-icon="logos:google-gmail" data-width="20" data-height="15"></i></a>
 
+                |
+  
+        <a href="https://github.com/pradipbhatt" target="_blank" rel="noreferrer noopener"><i class="fab fa-github fa-lg" aria-hidden="true" style="color: rgb(255, 255, 255);"></i></a>
 
+                |
+  
+        <a href="#" target="_blank" rel="noreferrer noopener"><i class="fab fa-instagram fa-lg" style="color: #d50079d0;"></i></a>
 
-
-
-
-
-
-
-
+                |
+  
+        <a href="#" target="_blank" rel="noreferrer noopener"><i class="fab fa-discord fa-lg" style="color: #0014ef;"></i></a>
+        <p id="" class="middleP2" style="text-align: center; color: rgb(0, 0, 0);">©2022 School of Engineering Society<br>Campus road St, Mahaendranagr, MNR <br>societyofengineeringstudent@gmail.com</p>
+    </div>
+    <div class="column-right">
+        <a href="https://www.fwneng.com/" target="_blank" rel="noreferrer noopener"><img src="images/fwuimg.jpeg"  alt=""></a>
+    </div>
+ </div>
 
 <script src="https://kit.fontawesome.com/ba33ab971e.js"></script>
 <script src="js/jquery.min.js"></script>
