--- a/notes/1semisterCIVIL.html
+++ b/notes/1semisterCIVIL.html
@@ -27,7 +27,7 @@
 
     
         <nav class="d-flex align-item-center justify-content-center justify-content-lg-between">
-            <a class="navbar-brand" href="2semister.html">
+            <a class="navbar-brand" href="1semisterCIVIL.html">
                 <img class="img-fluid" src="images/logo1.png" alt="">
             </a>
             <ul class="nav-list p-0 text-center" >
