This change is for footer

--- a/index.html
+++ b/index.html
@@ -333,14 +333,14 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="images/2FWUupdated.jpg" alt="First slide">
+      <img class="d-block w-100" src="images/autocad1.jpeg" alt="First slide">
       <div class="carousel-caption d-none d-md-block">
         <h3>FAR WESTERN UNIVERSITY</h3>
      <h3> A world-class academic institution with academic excellence, creative innovation, and research-based education.</h3>
       </div> 
     </div>
     <div class="carousel-item" >
-      <img class="d-block w-100" src="images/3FWUupdated2.jpg" alt="Second slide">
+      <img class="d-block w-100" src="images/autocad2.jpeg" alt="Second slide">
       <div class="carousel-caption d-none d-md-block">
           <h3>SCHOOL OF ENGINEERING</h3>
         <h3 > SOES is to create educational hob for teacher, teacher educators, researchers and other competent human resources as well as contributing on national development by providing skillfull and trained educators.</h3>
