--- a/constitution.html
+++ b/constitution.html
@@ -301,8 +301,13 @@
     <!-- Navbar starts From here -->
 </div>
 <a href="index.html"><img id="logo" alt="Personal Logo" src="images/logo1.jpeg"></a>
-<div class="welcome"><span id="welcome">Our Constitution.</span></div>
-<img alt="Personal Logo" src="images/constituion-fwucoverpic.jpeg" width="10px" height="800px">
+<div class="welcome" style="text-align: left;"><span id="welcome">Our Constitution.</span></div>
+
+
+<div class="image">
+<img  alt="Personal Logo" src="images/constituion-fwucoverpic.jpeg">
+</div>
+
 <hr id="underline">
 <div style="height: 7vh; margin: 0 auto;"></div>
 <div class="contact-grid">
@@ -316,8 +321,8 @@
             <i class="fas  fa-3x fa-book  "></i>
         </a>
     </div>
-    <div class="contact-info">
-        <a href="https://drive.google.com/file/d/1aNVcNTieWtCjBxKOVtSMRSiRu0MjHs3S/view?usp=sharing" class="left-underline">
+    <div class="contact-info" >
+        <a  href="https://drive.google.com/file/d/1aNVcNTieWtCjBxKOVtSMRSiRu0MjHs3S/view?usp=sharing" class="left-underline" >
             Browse Our Constitution
         </a>
     </div>
