--- a/notes/4semisterCIVIL.html
+++ b/notes/4semisterCIVIL.html
@@ -42,12 +42,12 @@
                 <div class="col-12 col-md-6 text-center text-md-left" data-aos="fade-right">
                     <div class="section-heading mb-3">
                         <h4>Notes SECTION</h4>
-                        <h1 class="display-4">Engineering Notes of first semister</h1>
+                        <h1 class="display-4">Engineering Notes of first semister microprocessor</h1>
                         
                     </div>
                     <p>“The mind has a powerful way of attracting things that are in harmony with it, good and bad.” “Mind is a flexible mirror, adjust it, to see a better world.” “Once your mindset changes, everything on the outside will change along with it.” “Happiness has to do with your mindset, not with outside circumstance.”</p>
-                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1rE8u1fW5IQNhvxQ-54WlKtdI6iaQq6xB/view?usp=sharing">Let-us-C</a>
-                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1iKxym84zEqL7mmVtmrZdF8x2FUISx_4e/view?usp=sharing">A book on C</a>
+                    <a class="btn mt-4 mb-6 mb-md-0" href="#">Book 1</a>
+                    <a class="btn mt-4 mb-6 mb-md-0" href="#"> Book2 </a>
                     <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/146PTvhlFCrQZ1dG9rxeq7yHoCzsFpzBA/view?usp=sharing">Advanced C</a>
                     <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1KcGN1jWCryuoRZVb2uKcYyeqCDo4891k/view?usp=sharing">Algorithmic In C </a>
                     <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1l1iGH8hy4FOk3h2XR_3nXSKyxQXfzacA/view?usp=sharing">C-program Guide</a>
@@ -57,7 +57,7 @@
 
                 </div>
                 <div class="col-12 col-md-6 " data-aos="fade-left" >
-                    <img class="img-fluid" src="images/c-pr.png" alt="" srcset="">
+                    <img style=" hei" class="img-fluid" src="images/Anu.jpg" alt="" srcset="">
                 </div>
             </div>
         </div>
