--- a/notes/2semister.html
+++ b/notes/2semister.html
@@ -139,12 +139,12 @@
                         
                     </div>
                     <p>Mathematics is the queen of science, and arithmetic the queen of mathematics." John von Neumann: "If people do not believe that mathematics is simple, it is only because they do not realize how complicated life is." Plato: "I have hardly ever known a mathematician who was capable of reasoning."”</p>
-                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1rE8u1fW5IQNhvxQ-54WlKtdI6iaQq6xB/view?usp=sharing">Let-us-C</a>
-                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1iKxym84zEqL7mmVtmrZdF8x2FUISx_4e/view?usp=sharing">A book on C</a>
-                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/146PTvhlFCrQZ1dG9rxeq7yHoCzsFpzBA/view?usp=sharing">Advanced C</a>
-                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1KcGN1jWCryuoRZVb2uKcYyeqCDo4891k/view?usp=sharing">Algorithmic In C </a>
-                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1l1iGH8hy4FOk3h2XR_3nXSKyxQXfzacA/view?usp=sharing">C-program Guide</a>
-                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1fkugYzQgkejO-E5dZrs50taVRYA_p5T0/view?usp=sharing">C-programming
+                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1rE8u1fW5IQNhvxQ-54WlKtdI6iaQq6xB/view?usp=sharing">Book-1</a>
+                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1iKxym84zEqL7mmVtmrZdF8x2FUISx_4e/view?usp=sharing">Book Solution</a>
+                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/146PTvhlFCrQZ1dG9rxeq7yHoCzsFpzBA/view?usp=sharing">Text Book</a>
+                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1KcGN1jWCryuoRZVb2uKcYyeqCDo4891k/view?usp=sharing">Hand written Notes </a>
+                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1l1iGH8hy4FOk3h2XR_3nXSKyxQXfzacA/view?usp=sharing">Text Book FWU</a>
+                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1fkugYzQgkejO-E5dZrs50taVRYA_p5T0/view?usp=sharing">Mathematics Textbook
                     </a>
                     
 
