--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"/>
+
+      
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
     <link rel="stylesheet" href="styles/bootnavbar.css" />
 
     <title>School of engineering Society</title>
- 
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- link to css of this file -->
     <link rel="stylesheet" href="styles/index.css">
@@ -54,7 +57,7 @@
 
   <body>
     <!-- Navbar starts here -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="main_navbar">
+    <nav class="navbar navbar-expand-lg navbar-light " id="main_navbar">
       <div class="container-fluid">
         <button
           class="navbar-toggler"
@@ -335,22 +338,22 @@
     <div class="carousel-item active">
       <img class="d-block w-100" src="images/autocad1.jpeg" alt="First slide">
       <div class="carousel-caption d-none d-md-block">
-        <h3 style="color: rgba(0, 7, 80, 0.707); font-size: 2rem; font-family: 'Bitter', serif;  text-align: center;">FAR WESTERN UNIVERSITY</h3>
-     <h3 style="color: rgba(128, 0, 19, 0.804); font-size: 2rem; font-family: 'Bitter', serif;  text-align: left; scrollbar-highlight-color: aqua; border-radius: 3px;"> Learn Together Grow together with SOES </h3>
+        <h1 class="text-primary text-opacity-50">FAR WESTERN UNIVERSITY</h1>
+     <h3  class="text-primary text-opacity-25 "> Learn Together Grow together with SOES </h3>
       </div> 
     </div>
     <div class="carousel-item" >
       <img class="d-block w-100" src="images/autocad2.jpeg" alt="Second slide">
       <div class="carousel-caption d-none d-md-block">
-          <h3 style="color: rgb(0, 136, 118); font-size: 2rem; font-family: 'Bitter', serif;  text-align: center;">SCHOOL OF ENGINEERING</h3>
-        <h3 style="color: rgba(123, 0, 19, 0.804); font-size: 2rem; font-family: 'Bitter', serif;  text-align: left; scrollbar-highlight-color: aqua; border-radius: 3px;"> SOES is to create educational hob for teacher, teacher educators, researchers and other competent human resources as well as contributing on national development by providing skillfull and trained educators.</h3>
+          <h1>SCHOOL OF ENGINEERING</h1>
+        <h3 class="crausers"> SOES is to create educational hob for teacher, teacher educators, researchers and other competent human resources as well as contributing on national development by providing skillfull and trained educators.</h3>
         </div>
     </div>
     <div class="carousel-item">
-      <img style="height:600px" class="d-block w-100" src="images/4FWUupdated.jpg" alt="Third slide">
+      <img class="d-block w-100" src="images/4FWUupdated.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
-          <h3 style="color: rgb(0, 2, 90); font-size: 2rem; font-family: 'Bitter', serif;  text-align: center;">SCHOOL OF ENGINEERING SOCIETY</h3>
-         <h3 style="color: rgba(159, 0, 24, 0.804); font-size: 2rem; font-family: 'Bitter', serif;  text-align: left; scrollbar-highlight-color: aqua; border-radius: 3px;">The strategic location of the University in the Far western region would not only support improving the access of local people to higher education but also create dynamism on the overall development of the region.</h3></i>
+          <h1 class="crausers">SCHOOL OF ENGINEERING SOCIETY</h1>
+         <h3 class="crausers">The strategic location of the University in the Far western region would not only support improving the access of local people to higher education but also create dynamism on the overall development of the region.</h3></i>
         </div>
     </div>
   </div>
@@ -486,31 +489,82 @@
 
 
 
-  <!-- Footer -->
+<footer class="site-footer">
   <div class="container">
-    <div class="column-left">
-        <a href="index.html"><img src="images/logo1.jpeg" alt=""></a>
+  <div class="row mb5">
+    <div class="col-md-3 mb-5">
+      <h2>
+        about_Us
+      </h2>
+      <p>
+        We aim to help every individual grow as a person and as as tech professional to feel confident in their tech skills once they graduate. On top of that, we are a community of like-minded individuals who are eager to network and succeed. Come join us at the SOES Club at Far western University.
+        <!-- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis inventore architecto eligendi sunt minus officia cum neque sequi eum, similique optio beatae quas reprehenderit itaque sapiente repellat consectetur ea explicabo? -->
+      </p>
+      <p>
+        <a href="#">Learn More SOES</a>
+      </p>
     </div>
-    <div class="column-center">
-        <a href="mailto:societyofengineeringstudent@gmail.com"><i class="iconify" data-icon="logos:google-gmail" data-width="20" data-height="15"></i></a>
-
-                |
-  
-        <a href="https://github.com/pradipbhatt" target="_blank" rel="noreferrer noopener"><i class="fab fa-github fa-lg" aria-hidden="true" style="color: rgb(255, 255, 255);"></i></a>
-
-                |
-  
-        <a href="#" target="_blank" rel="noreferrer noopener"><i class="fab fa-instagram fa-lg" style="color: #d50079d0;"></i></a>
-
-                |
-  
-        <a href="#" target="_blank" rel="noreferrer noopener"><i class="fab fa-discord fa-lg" style="color: #0014ef;"></i></a>
-        <p id="" class="middleP2" style="text-align: center; color: rgb(0, 0, 0);">©2022 School of Engineering Society<br>Campus road St, Mahaendranagr, MNR <br>societyofengineeringstudent@gmail.com</p>
+    <div class="col-md-3 mb-5">
+      <h2>
+        Contact Adress
+      </h2>
+      <ul class="list-unstyled footer-link ">
+        <li class="d-flex">
+          <span class="me-3">
+            Telephone: <span class="text-white">98*********</span>
+          </span>
+        </li>
+        <li class="d-flex">
+          <span class="me-3">
+            Email: <span class="text-white">emailadress****</span>
+          </span>
+        </li>
+        <li class="d-flex">
+          <span class="me-3">
+            Adress: <span class="text-white">Bhimdatt-Municipality MNR-18</span>
+          </span>
+        </li>
+      </ul>
     </div>
-    <div class="column-right">
-        <a href="https://www.fwneng.com/" target="_blank" rel="noreferrer noopener"><img src="images/fwuimg.jpeg"  alt=""></a>
+
+
+    <div class="col-md-3 mb-5">
+      <h2>Quick Links</h2>
+      <ul 
+       class="list-unstyled ">
+        <li><a  href="#">About Us</a></li>
+        <li><a  href="#">Notes</a></li>
+        <li><a   href="#">FWUeng</a></li>
+        <li><a   href="#">FB portal</a></li>
+        <li><a   href="#">INSTA portal</a></li>
+      </ul>
     </div>
- </div>
+
+    <div class="col-md-3">
+      <h2>
+        Our Social Medias
+      </h2>
+      <ul class="list-unstyled footer-link d-flex footer-social">
+        <li><a href="#"> <span class="fa fa-facebook"></span></a></li>
+        <li><a href="#"> <span class="fa fa-instagram"></span></a></li>
+        <li><a href="#"> <span class="fa fa-twitter"></span></a></li>
+        <li><a href="#"> <span class="fa fa-github"></span></a></li>
+      </ul>
+    </div>
+  </div>
+   
+  <div class="row">
+  <div class="col-12 text md center text-left ">
+        <p>
+          This is made by SOES<i class=" fa fa-heart"></i>
+        </p>     
+   </div>
+  </div>
+  </div> 
+
+  </div>
+
+</footer>
  <!-- end of footer -->
 </div>
   <!-- JS -->
@@ -521,6 +575,7 @@
   <!-- end of script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/bootnavbar.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script>
       new bootnavbar();
     </script>
