--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
   <!-- end of collaborate section  -->
 
 
-
+<!-- Footer starts from here -->
 <footer class="site-footer">
   <div class="container">
   <div class="row mb5">
@@ -561,9 +561,7 @@
    </div>
   </div>
   </div> 
-
   </div>
-
 </footer>
  <!-- end of footer -->
 </div>
