--- a/notes/5semisterCIVIL.html
+++ b/notes/5semisterCIVIL.html
@@ -391,6 +391,83 @@
 </main>
 
 
+<!-- Footer starts from here -->
+<footer class="site-footer">
+    <div class="container">
+    <div class="row mb5">
+      <div class="col-md-3 mb-5">
+        <h2>
+          about_Us
+        </h2>
+        <p>
+          We aim to help every individual grow as a person and as as tech professional to feel confident in their tech skills once they graduate. On top of that, we are a community of like-minded individuals who are eager to network and succeed. Come join us at the SOES Club at Far western University.
+          <!-- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis inventore architecto eligendi sunt minus officia cum neque sequi eum, similique optio beatae quas reprehenderit itaque sapiente repellat consectetur ea explicabo? -->
+        </p>
+        <p>
+          <a href="#">Learn More SOES</a>
+        </p>
+      </div>
+      <div class="col-md-3 mb-5">
+        <h2>
+          Contact Adress
+        </h2>
+        <ul class="list-unstyled footer-link ">
+          <li class="d-flex">
+            <span class="me-3">
+              Telephone: <span class="text-white">98*********</span>
+            </span>
+          </li>
+          <li class="d-flex">
+            <span class="me-3">
+              Email: <span class="text-white">emailadress****</span>
+            </span>
+          </li>
+          <li class="d-flex">
+            <span class="me-3">
+              Adress: <span class="text-white">Bhimdatt-Municipality MNR-18</span>
+            </span>
+          </li>
+        </ul>
+      </div>
+  
+  
+      <div class="col-md-3 mb-5">
+        <h2>Quick Links</h2>
+        <ul 
+         class="list-unstyled ">
+          <li><a  href="#">About Us</a></li>
+          <li><a  href="#">Notes</a></li>
+          <li><a   href="#">FWUeng</a></li>
+          <li><a   href="#">FB portal</a></li>
+          <li><a   href="#">INSTA portal</a></li>
+        </ul>
+      </div>
+  
+      <div class="col-md-3">
+        <h2>
+          Our Social Medias
+        </h2>
+        <ul class="list-unstyled footer-link d-flex footer-social">
+          <li><a href="#"> <span class="fa fa-facebook"></span></a></li>
+          <li><a href="#"> <span class="fa fa-instagram"></span></a></li>
+          <li><a href="#"> <span class="fa fa-twitter"></span></a></li>
+          <li><a href="#"> <span class="fa fa-github"></span></a></li>
+        </ul>
+      </div>
+    </div>
+     
+    <div class="row">
+    <div class="col-12 text md center text-left ">
+          <p>
+            This is made by SOES<i class=" fa fa-heart"></i>
+          </p>     
+     </div>
+    </div>
+    </div> 
+    </div>
+  </footer>
+   <!-- end of footer -->
+
 
 <script src="https://kit.fontawesome.com/ba33ab971e.js"></script>
 <script src="js/jquery.min.js"></script>
