--- a/index.html
+++ b/index.html
@@ -202,14 +202,7 @@
                 </li>
               </ul>
             </li>
-
-
-
-
-
-            
-            
-          <!-- Our publication section -->
+           <!-- Our publication section -->
           <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
@@ -286,7 +279,10 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="https://www.facebook.com/profile.php?id=100083543161885">News/Notices</a>
+            <a class="nav-link" href="entrance.html">Notices about Entrance</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="events.html">Events/Meetings</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact-info</a>
