--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
-
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHXX8JNY0K"></script>
 <script>
@@ -18,7 +16,7 @@
 <link rel="stylesheet" href="styles/home.css">
 <link rel="stylesheet" href="styles/contact.css">
 <script src="https://kit.fontawesome.com/5f5bb1c58f.js" crossorigin="anonymous"></script>
-<script src="global.js"></script>
+<script src="global.js"></script> 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>SOES Far western University</title>
@@ -321,26 +319,49 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="images/autocad1.jpeg" alt="First slide">
+      <img class="d-block w-100" src="notes/images/IMG_4727.JPG" alt="First slide">
       <div class="carousel-caption d-none d-md-block">
-        <h1 class="text-primary text-opacity-50">FAR WESTERN UNIVERSITY</h1>
-     <h3  class="text-primary text-opacity-25 "> Learn Together Grow together with SOES </h3>
+        <h1 class="text-primary text-opacity-50">Welcome to far western university</h1>
+     <!-- <h3  class="text-primary text-opacity-25 "> We are Enginners from Far western Uiversity</h3> -->
       </div> 
     </div>
     <div class="carousel-item" >
-      <img class="d-block w-100" src="images/autocad2.jpeg" alt="Second slide">
+      <img class="d-block w-100" src="notes/images/IMG_4744.JPG" alt="Second slide">
       <div class="carousel-caption d-none d-md-block">
-          <h1>SCHOOL OF ENGINEERING</h1>
-        <h3 class="crausers"> SOES is to create educational hob for teacher, teacher educators, researchers and other competent human resources as well as contributing on national development by providing skillfull and trained educators.</h3>
+          <h1 class="text-primary text-opacity-50">SCHOOL OF ENGINEERING</h1>
+        <!-- <h3 class="crausers"> SOES helps in providing skillfull and trained educators.</h3> -->
+        </div>
+    </div>
+    <div class="carousel-item" >
+      <img class="d-block w-100" src="notes/images/enginnersdajubhae1.jpg" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+          <h1 class="text-primary text-opacity-50">Learn Together Grow together with SOES</h1>
+        <!-- <h3 class="crausers"> Learn Together Grow together with SOES </h3> -->
+        </div>
+    </div>
+    <div class="carousel-item" >
+      <img class="d-block w-100" src="notes/images/IMG_4828.JPG" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+          <!-- <h1>SCHOOL OF ENGINEERING</h1> -->
+        <h3 class="text-primary text-opacity-50" class="crausers"> SOES is to create educational hob for teacher, teacher educators, researchers and other competent human resources as well as contributing on national development by providing skillfull and trained educators.</h3>
+        </div>
+    </div>
+    <div class="carousel-item" >
+      <img class="d-block w-100" src="notes/images/IMG_4744.JPG" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+          <!-- <h1>SCHOOL OF ENGINEERING</h1> -->
+        <h3 class="text-primary text-opacity-50" class="crausers">Society of Engineering Students.</h3>
         </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/4FWUupdated.jpg" alt="Third slide">
+      <img class="d-block w-100" src="notes/images/IMG_4826.JPG" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
-          <h1 class="crausers">SCHOOL OF ENGINEERING SOCIETY</h1>
+          <!-- <h1 class="crausers">SCHOOL OF ENGINEERING SOCIETY</h1> -->
          <h3 class="crausers">The strategic location of the University in the Far western region would not only support improving the access of local people to higher education but also create dynamism on the overall development of the region.</h3></i>
         </div>
     </div>
@@ -358,7 +379,8 @@
 
 
 
-
+<!-- School of Engineering
+Society Club SECTION  -->
 <div class="body1">
   <!-- Welcome section for deescribing about the Engineering Club -->
   <div class="welcome-flex-container">
@@ -390,10 +412,10 @@
   <!-- What the club is about Section -->
   <div class="about-flex-container" >
       <div class="about-main-content">
-          <p class="about-section-title">What the Club is About</p>
+          <p class="about-section-title">What the SOES is About</p>
 
           <p class="about-section-description">
-          We are the students let club organiztion that believes in helping  BCT and BCE students succeed in the STEM field. We offer events that are aimed and designed to grow your understanding of tech and fields  related skills. <br><br> Whether you're aiming to be a Software Engineer, Data Scientist, or Project Manager, we offer a community of like-minded individuals who are eager to connect and learn with others.
+          We are the students that believes in helping  BCT and BCE students succeed in the STEM field. We offer events that are aimed and designed to grow your understanding of tech and fields  related skills. <br><br> Whether you're aiming to be a Software Engineer, Data Scientist, or Project Manager, we offer a community of like-minded individuals who are eager to connect and learn with others.
           </p>
 
           <div class= "about-button-section">
@@ -413,7 +435,7 @@
   <!-- events section -->
   <div class="events-flex-container" >
       <div class="events-img-section">
-          <img src="images/event.jpeg" alt="" class="events-img">
+          <img src="notes/images/suisters.JPG" alt="" class="events-img">
       </div>
 
       <div class="events-main-content">
@@ -452,13 +474,10 @@
   </div>
   <!-- end of resources section  -->
 
-
-
-
   <!-- Collaborate Secion -->
   <div class="collaborate-flex-container" >
       <div class="collaborate-img-section">
-          <img src="images/collab.png" alt="" class="collaborate-img">
+          <img src="notes/images/IMG_4812.JPG" alt="" class="collaborate-img">
       </div>
 
       <div class="collaborate-main-content">
@@ -474,6 +493,9 @@
       </div>
   </div>
   <!-- end of collaborate section  -->
+
+  <hr style="height: 3px;px; width:100%; border: width 2px;; color:rgb(18, 77, 140); background-color:rgb(3, 1, 1)">
+
 
 
 <!-- Footer starts from here -->
@@ -540,19 +562,20 @@
       </ul>
     </div>
   </div>
-   
-  <div class="row">
-  <div class="col-12 text md center text-left ">
-        <p>
-          This is made by SOES<i class=" fa fa-heart"></i>
-        </p>     
-   </div>
-  </div>
-  </div> 
-  </div>
-</footer>
- <!-- end of footer -->
+    
+</div> 
+<div >
+<div style="text-align:center ; color: black;">
+  
+      <p>
+        This is made by SOES<i class=" fa fa-heart"></i>
+      </p>     
+ </div>
 </div>
+</div>
+</footer>
+</div>
+<!-- end of footer -->
  
 <!-- JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
